- 
    Bug 
- 
    Resolution: Done
- 
    P4: Low 
- 
    Qt Creator 2.4.0
- 
    Ubuntu 10.04 64bit
 N900 Maemo
- 
        02842c146c4237d37553ca570786f41864c7d109
Hovering over the Debug button gives a tooltip "Cannot run 'maemocpp(remote)' in mode 'Debugger.DebugMode'.
This happens when the number of free ports is less than 3.
Expected behaviour:
Indicate that there are not enough free ports to start the debugger
| For Gerrit Dashboard: QTCREATORBUG-6330 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 52566,1 | RemoteLinux/Madde: Do not do too much checking in run control factories. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |