RemoteLinux/Madde: Do not do too much checking in run control factories.

Only check whether we are generally responsible for the given type of
run configuration. Delay the other checks to a point where we can give a
meaningful error message to the user.

Task-number: QTCREATORBUG-6330
Change-Id: I9c8419da7780ebe17ff853bcae3de14b9cb66b71
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>